<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">location.world</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="logpos_text">Send Data</string>
    <string name="username_hint">username</string>
    <string name="username_hint2">username (repeat)</string>
    <string name="password_hint">password</string>
    <string name="password_hint2">password (repeat)</string>
    <string name="login_button_text">Login/Register</string>

</resources>
