<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress" />
    
       <EditText
        android:id="@+id/group_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="Group"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
    
     <EditText
        android:id="@+id/password_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password_hint2"
        android:inputType="textPassword" />

     <RadioGroup
         android:id="@+id/radioGroup1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

        <RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1"  android:checked="true" android:id="@+id/radio1" android:button="@drawable/char1sel"></RadioButton>
        <RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:button="@drawable/char2sel" android:id="@+id/radio2"></RadioButton>
        <RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:button="@drawable/char3sel" android:id="@+id/radio3"></RadioButton>
        <RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:button="@drawable/char4sel" android:id="@+id/radio4"></RadioButton>
    </RadioGroup>

</LinearLayout>