<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- This can go anywhere in your layout (see other demos for some examples). -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id = "@+id/menu_layout" 
        style= "@style/MenuStyle">

                <Button
                    android:id="@+id/log_position_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:onClick="logPositionButton"
                    android:padding="8dp"
                    android:text="@string/logpos_text"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/hide_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/password_text"
                    android:onClick="hideMenu"
                    android:text="Hide" />

                <EditText
                    android:id="@+id/userid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/userid_text"
                    android:layout_alignRight="@+id/userid_text"
                    android:layout_below="@+id/userid_text"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:visibility="visible" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/log_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/log_in_button"
                    android:layout_alignBottom="@+id/log_in_button"
                    android:layout_centerHorizontal="true"
                    android:onClick="logOutButton"
                    android:padding="8dp"
                    android:text="@string/logout_text"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/hide_button"
                    android:layout_alignBottom="@+id/hide_button"
                    android:layout_centerHorizontal="true"
                    android:onClick="logInButton"
                    android:padding="8dp"
                    android:text="@string/login_text" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Menu"
            android:onClick = "openMenu" />

    </RelativeLayout>

</LinearLayout>